chore (frontend-react): upgrade js to ts

--- a/alex-fitness-demo-frontend-framework7-react/package.json
+++ b/alex-fitness-demo-frontend-framework7-react/package.json
@@ -35,12 +35,16 @@
     "swiper": "^12.0.3"
   },
   "devDependencies": {
+    "@types/node": "^24.10.0",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
     "@vitejs/plugin-react": "^5.1.0",
     "cpy-cli": "^6.0.0",
     "cross-env": "^10.1.0",
     "less": "^4.4.2",
     "postcss-preset-env": "^10.4.0",
     "rollup": "^4.52.5",
+    "typescript": "^5.9.3",
     "vite": "^7.1.12",
     "vite-plugin-html": "^3.2.2"
   }
