--- a/alex-fitness-demo-backend-laravel/.env.example
+++ b/alex-fitness-demo-backend-laravel/.env.example
@@ -1,8 +1,8 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:9M+rZLXnju1ZurcLMAulD00BM+XjM0mP+T/G231Nfbc=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -20,12 +20,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=localhost
+DB_PORT=3306
+DB_DATABASE=alex-fitness
+DB_USERNAME=admin
+DB_PASSWORD=s3cret
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
